# shell

./: CMakeLists.txt  cp.c  grep.c  ls.c  main.c  mkdir.c  mv.c  rm.c
